Test fix for windows systems